--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container">
-        <a href="index.php"><button class="btn btn-primary">Click to open Site</button></a>
+        <a href="index.php">Click to open Site</a>
     </div>
 </body>
 
